# goiabisse

./: .gitignore  README.md  comandos.txt  export_dotnet.sh  extenções.txt  free_port.sh  links.txt  test-webapi.sln
acceptorFix/client/: Application.cpp  Application.h  CMakeLists.txt  client.cpp  simulador.cfg
acceptorFix/client/database/: FIX.4.2-CLIENT-SIMULADOR.ORDEM.body  FIX.4.2-CLIENT-SIMULADOR.ORDEM.header  FIX.4.2-CLIENT-SIMULADOR.ORDEM.seqnums  FIX.4.2-CLIENT-SIMULADOR.ORDEM.session  FIX.4.2-CLIENT1-SIMULADOR.ORDEM.body  FIX.4.2-CLIENT1-SIMULADOR.ORDEM.header  FIX.4.2-CLIENT1-SIMULADOR.ORDEM.seqnums  FIX.4.2-CLIENT1-SIMULADOR.ORDEM.session
acceptorFix/client/src/: Makefile  Makefile.in  at  pt  ut
acceptorFix/client/src/C++/: DataDictionary.lo  DataDictionaryProvider.lo  Dictionary.lo  FieldMap.lo  FieldTypes.lo  FileStore.lo  Group.lo  HttpMessage.lo  HttpParser.lo  Log.lo  Makefile  Makefile.in  Message.lo  MessageSorters.lo  MessageStore.lo  MySQLLog.lo  stamp-h1  (+11 more)
acceptorFix/servidor/: Application.cpp  Application.h  CMakeLists.txt  IDGenerator.h  Market.cpp  Market.h  Order.h  OrderCommand.h  Simulador.cfg  StartServidor.cpp  app  simulador.cfg
acceptorFix/servidor/database/: FIX.4.2-SIMULADOR.ORDEM-SERVIDOR.session
acceptorFix/servidor/src/: Acceptor.lo  FieldConvertors.lo  FileLog.lo  HttpConnection.lo  HttpServer.lo  Initiator.lo  MySQLStore.lo  PUGIXML_DOMDocument.lo  Parser.lo  Session.lo  SessionFactory.lo  SessionSettings.lo  SocketInitiator.lo  SocketMonitor.lo  ThreadedSocketConnection.lo  TimeRange.lo  Utility.lo  config.h.in  pugixml.lo
(+84 files in other folders)
